--- a/all-units.template
+++ b/all-units.template
@@ -2,3 +2,12 @@
 # Common Keys
 strictLevel: 1
 switchPriceWithStreamingCost: true
+
+#==== Resources
+
+[global_resource_material]
+displayName: Material
+hidden: false
+priority: 0
+displayColor: #FF0000
+displayWhenZero: true
