Revert "Separate `all-units.template`"
This reverts commit 0b94717678efe64ef7b1a9d3b17321ac6700276f.

--- a/all-units.template
+++ b/all-units.template
@@ -1,3 +1,10 @@
+[core]
+# Common Keys
+strictLevel: 1
+switchPriceWithStreamingCost: true
+
+#==== Resources
+
 [global_resource_material]
 displayName: Material
 hidden: false
