--- a/units/bulidings/resources/mine/mineT2.ini
+++ b/units/bulidings/resources/mine/mineT2.ini
@@ -1,21 +1,16 @@
-
 [core]
-name: mineT1
+name: mineT2
 displayLocaleKey: mine
 copyFrom: mine_common.ini
-price: 700
-maxHp: 800
-techLevel: 1
-buildSpeed: 0.0010
+maxHp: 1600
+techLevel: 2
 
-overrideAndReplace: extractor
+generation_resources: material=7
 
-generation_resources: credits=8
-
-[action_upgradeT2]
-# convertTo: mineT2
-price: 1400
-text: i:gui.actions.upgradeT2
+[action_upgradeT3]
+convertTo: mineT3
+price: material=1400, alloy=300
+text: i:gui.actions.upgradeT3
 description: i:units.extractor.upgrade.description
 displayType: upgrade
 buildSpeed: 0.0006
